Test overflow fix

--- a/src/pages/project-page/ProjectPage.scss
+++ b/src/pages/project-page/ProjectPage.scss
@@ -6,6 +6,9 @@
   width: 100vw;
   hyphens: auto;
 
+  overflow-x: hidden;
+  overflow-y: auto;
+
   h1{
     margin-top: 0px !important;
   }
